--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -2,3 +2,5 @@
 title: Mardown 101
 description: Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
 ---
+
+> Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
