--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -2,5 +2,11 @@
 title: Mardown 101
 description: Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
 ---
+Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
 
-> Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
+> [!NOTE] Flemme d'écrire en Markdown ?
+> 
+> Vous pouvez toujours prendre votre texte, le mettre dans un fichier `.txt` et le renommer en `.md` - il fonctionnera sans problème (mais sans mise en forme)
+
+*Justement,*
+# La Mise en forme Markdown
