--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -9,4 +9,4 @@ Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vo
 > Vous pouvez toujours prendre votre texte, le mettre dans un fichier `.txt` et le renommer en `.md` - il fonctionnera sans problème (mais sans mise en forme)
 
 *Justement,*
-# La Mise en forme Markdown
+# Mise en forme Markdown
