--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -54,15 +54,147 @@ Les titres sont les espaces de textes en grand. Il existe 6 niveaux de titres :
 Les titres de niveau 1 à 3 s'affichent dans l'onglet **Table Des Matières**
 
 ## Gras, Italique
+Vous pouvez très simplement mettre en **gras**, en *italique* ou en ***gras et en italique*** en utilisant des `*`. Entourez le texte que vous voulez modifier avec une astérisque le rend Italique et deux le rend gras.
+
+```md
+*Ceci est du texte en Italique*
+**Ceci est du texte en gras**
+***Ceci est du texte en gras et en italique***
+```
 ## Liens, Images
 ## Tableaux
+> [!warning] Les tableaux sont infernaux ?
+> Obisdian vous permet en un clic de créer un tableau. Si vous avez du mal à les mettre en forme (ce qui vu la tête du truc est pas étonnant), pensez à utiliser un éditeur Markdown
 
 # Mise en forme Obsidian
 > *Certaines fonctionnalités de Obsidian fonctionnent sur Fiches.me*
 
 ## Admonitions
-Les admonitions sont des blocs d'informations, des alertes affichés en couleur.
+Les admonitions sont des blocs d'informations, des alertes affichés en couleur. Tout le contenu du bloc doit être devant un symbole `>` et vous devez ajouter `[!NOM]` devant la première ligne pour définir le type (voir le nom) de votre Admonition.
+
+### Listes des Admonitions
+
+> [!SUCCESS]
+> Aliases: “success”, “check”, “done”
+
+```markdown
+> [!SUCCESS]
+> Useful information that users should know, even when skimming content.
+```
+---
+> [!INFO]
+> Useful information that users should know, even when skimming content.
+
+```markdown
+> [!INFO]
+> Useful information that users should know, even when skimming content.
+```
+---
+> [!NOTE]
+> Useful information that users should know, even when skimming content.
+
+```markdown
+> [!NOTE]
+> Useful information that users should know, even when skimming content.
+```
+---
+> [!Todo]
+> Aliases: “abstract”, “summary”, “tldr”
+
+```markdown
+> [!Todo]
+> Useful information that users should know, even when skimming content.
+```
+---
+> [!ABSTRACT]
+> Aliases: “abstract”, “summary”, “tldr”
+
+```markdown
+> [!ABSTRACT]
+> Useful information that users should know, even when skimming content.
+```
+---
+> [!TIP]
+> Aliases: “tip”, “hint”, “important”
+
+```markdown
+> [!TIP]
+> Helpful advice for doing things better or more easily.
+```
+---
+> [!QUESTION]
+> Aliases: “question”, “help”, “faq”
+
+```markdown
+> [!QUESTION]
+> Useful information that users should know, even when skimming content.
+```
+---
+> [!WARNING]
+> Aliases: “warning”, “attention”, “caution”
+
+```markdown
+> [!WARNING]
+> Urgent info that needs immediate user attention to avoid problems.
+```
+---
+> [!Failure]
+> Aliases: “failure”, “missing”, “fail”
+
+```markdown
+> [!Failure]
+> Key information users need to know to achieve their goal.
+```
+---
+> [!BUG]
+> Key information users need to know to achieve their goal.
+
+```markdown
+> [!BUG]
+> Key information users need to know to achieve their goal.
+```
+---
+> [!DANGER]
+> Aliases: “danger”, “error”
+
+```markdown
+> [!DANGER]
+> Advises about risks or negative outcomes of certain actions.
+```
+This one work also with ![ERROR]
+
+---
+> [!EXAMPLE]
+> Key information users need to know to achieve their goal.
+
+```markdown
+> [!EXAMPLE]
+> Key information users need to know to achieve their goal.
+```
+---
+> [!QUOTE]
+> Aliases: “quote”, “cite”
+
+```markdown
+> [!QUOTE]
+> Advises about risks or negative outcomes of certain actions.
+```
+
+### Changer le titre d'une Admonition
+Vous pouvez modifier le titre d'une Admonition en ajoutant du texte devant le tag `[!nom]` :
+
+> [!QUOTE] Once A Man Said
+> Markdown is the best programation language of the world
+
+```markdown
+> [!QUOTE] Once A Man Said
+> Markdown is the best programation language of the world
+```
+
 # Mise en forme Fiches.me
 > *Pour un max de style, nous avons ajouter quelques fonctionalité aux [[#Admonitions|Admonitions]]par exemple.*
 
 ## Admonitions Additionnelles
+
+> [!definition]
+> Une définition - de SES ??? 
