--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -61,7 +61,9 @@ Vous pouvez très simplement mettre en **gras**, en *italique* ou en ***gras et 
 **Ceci est du texte en gras**
 ***Ceci est du texte en gras et en italique***
 ```
+
 ## Listes
+Les listes s'écrivent comme dans un texte classique, avec des tirets. Il est aussi possible d'utiliser des nombres `1.`, `2.`, `3.` suivit d'un point.
 
 - Texte 1
 - Texte 2
@@ -70,6 +72,33 @@ Vous pouvez très simplement mettre en **gras**, en *italique* ou en ***gras et 
 1. Texte 1
 2. Texte 2
 3. Texte 3
+
+```md
+- Texte 1
+- Texte 2
+- Texte 3
+
+1. Texte 1
+2. Texte 2
+3. Texte 3
+```
+
+Vous pouvez aussi ajouter trois espaces pour créer des sous listes (fonctionne aussi avec les nombres)
+
+- Une Liste
+   - une sous liste
+   - une sous liste
+    - Une super sous liste
+   - Texte liste
+
+```md
+- Une Liste
+   - une sous liste
+   - une sous liste
+      - Une super sous liste
+   - Texte liste
+```
+
 ## Liens, Images
 Vous pouvez crée des [liens](#) avec le markdown en utilisant des parenthèse :
 ```md
@@ -82,8 +111,24 @@ En ajoutant un `!` devant votre lien, il sera affiché en tant qu'image
 ```md
 ![Ceci est une image](https://github.com/DreamCloud-Development.png)
 ```
+
 ## Tableaux
-> [!warning] Les tableaux sont infernaux ?
+Pour faire un tableau, il faut dessiner un tableau avec des tirets autour de son contenu. Exemple :
+
+
+| Fonction | -♾️ | 4          | +♾️ |
+| -------- | --- | ---------- | --- |
+| f'       | -   | 0          | +   |
+| f        | ↘️   | f(0) = -50 | ↗️   |
+
+```md
+| Fonction | -♾️ | 4          | +♾️ |
+| -------- | --- | ---------- | --- |
+| f'       | -   | 0          | +   |
+| f        | ↘️   | f(0) = -50 | ↗️   |
+```
+
+> [!question] Les tableaux sont infernaux ?
 > Obisdian vous permet en un clic de créer un tableau. Si vous avez du mal à les mettre en forme (ce qui vu la tête du truc est pas étonnant), pensez à utiliser un éditeur Markdown
 
 # Mise en forme Obsidian
@@ -216,5 +261,5 @@ Vous pouvez modifier le titre d'une Admonition en ajoutant du texte devant le ta
 
 ## Admonitions Additionnelles
 
-> [!definition]
+> [!définition]
 > Une définition - de SES ??? 
