📑 Typo et refract

--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -27,7 +27,7 @@ Chaque demo sur cette fiche est composé en deux parties : le rendu et le code. 
 ```
 
 > [!warning] Les espaces comptes dans les blocs de code !
-> Ici, c'est le fait d'avoir 0, 2, 4 ou x espaces qui séparent les listes des sous-listes.
+> Ici, c'est le fait d'avoir 0, 3, 6 ou x espaces qui séparent les listes des sous-listes.
 
 # Mise en forme Markdown
 > *Mise en forme classique sur tout site Markdown*
@@ -88,7 +88,7 @@ Vous pouvez aussi ajouter trois espaces pour créer des sous listes (fonctionne 
 - Une Liste
    - une sous liste
    - une sous liste
-    - Une super sous liste
+      - Une super sous liste
    - Texte liste
 
 ```md
@@ -106,15 +106,13 @@ Vous pouvez crée des [liens](#) avec le markdown en utilisant des parenthèse :
 ```
 En ajoutant un `!` devant votre lien, il sera affiché en tant qu'image
 
-![Ceci est une image](https://github.com/DreamCloud-Development.png)
-
 ```md
 ![Ceci est une image](https://github.com/DreamCloud-Development.png)
 ```
 
+![Ceci est une image](https://github.com/DreamCloud-Development.png)
 ## Tableaux
 Pour faire un tableau, il faut dessiner un tableau avec des tirets autour de son contenu. Exemple :
-
 
 | Fonction | -♾️ | 4          | +♾️ |
 | -------- | --- | ---------- | --- |
@@ -261,5 +259,5 @@ Vous pouvez modifier le titre d'une Admonition en ajoutant du texte devant le ta
 
 ## Admonitions Additionnelles
 
-> [!définition]
+> [!definition]
 > Une définition - de SES ??? 
