--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -62,6 +62,14 @@ Vous pouvez très simplement mettre en **gras**, en *italique* ou en ***gras et 
 ***Ceci est du texte en gras et en italique***
 ```
 
+## Autre modifications du texte 
+
+Il est possible de ~~barrer du texte~~, de le mettre dans `un bloc de code` avec la syntaxe suivante :
+
+```md
+Ceci est `dans un bloc`
+Ceci est ~~barré~~
+```
 ## Listes
 Les listes s'écrivent comme dans un texte classique, avec des tirets. Il est aussi possible d'utiliser des nombres `1.`, `2.`, `3.` suivit d'un point.
 
@@ -128,6 +136,21 @@ Pour faire un tableau, il faut dessiner un tableau avec des tirets autour de son
 
 > [!question] Les tableaux sont infernaux ?
 > Obisdian vous permet en un clic de créer un tableau. Si vous avez du mal à les mettre en forme (ce qui vu la tête du truc est pas étonnant), pensez à utiliser un éditeur Markdown
+
+## Blocs de code
+Si vous voulez afficher du code sur plus d'une ligne, vous pouvez créer un bloc avec 3 guillemets .
+
+```
+print("Ça marche !")
+# C'est avec ces guillemets => ```
+```
+
+Vous pouvez aussi ajouter le nom d'un langage de programation pour mettre le bloc en couleurs
+
+```python
+print("Ça marche !")
+# C'est avec ces guillemets => ```
+```
 
 # Mise en forme Obsidian
 > *Certaines fonctionnalités de Obsidian fonctionnent sur Fiches.me*
@@ -254,6 +277,11 @@ Vous pouvez modifier le titre d'une Admonition en ajoutant du texte devant le ta
 > Markdown is the best programation language of the world
 ```
 
+## Liens Obsidian
+Obsidian utilise des doubles parenthèses `[[]]` pour faire des [[content/index|liens dynamiques]]. Cela ne change que le rendu du Lien sur le site mais fonctionne de la même manière
+
+## Trucs Randoms
+Les ==textes surlignés==
 # Mise en forme Fiches.me
 > *Pour un max de style, nous avons ajouter quelques fonctionalité aux [[#Admonitions|Admonitions]]par exemple.*
 
