--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -278,7 +278,7 @@ Vous pouvez modifier le titre d'une Admonition en ajoutant du texte devant le ta
 ```
 
 ## Liens Obsidian
-Obsidian utilise des doubles parenthèses `[[]]` pour faire des [[content/index|liens dynamiques]]. Cela ne change que le rendu du Lien sur le site mais fonctionne de la même manière
+Obsidian utilise des doubles parenthèses `[[]]` pour faire des [[/index|liens dynamiques]]. Cela ne change que le rendu du Lien sur le site mais fonctionne de la même manière
 
 ## Trucs Randoms
 Les ==textes surlignés==
