Ajout du lien & tuto gh

--- a/content/contribution/101.md
+++ b/content/contribution/101.md
@@ -29,6 +29,7 @@ Chaque demo sur cette fiche est composé en deux parties : le rendu et le code. 
 > [!warning] Les espaces comptes dans les blocs de code !
 > Ici, c'est le fait d'avoir 0, 3, 6 ou x espaces qui séparent les listes des sous-listes.
 
+Tout les fichiers Markdown qui compose fiches.me sont hébergés sur [notre GitHub](https://github.com/DreamCloud-Development/fiches.me). Suivez [[./github.md|ce guide]] pour plus d'informations.
 # Mise en forme Markdown
 > *Mise en forme classique sur tout site Markdown*
 
