--- a/content/philo/ch1/g2.md
+++ b/content/philo/ch1/g2.md
@@ -67,7 +67,14 @@ L'eau dans la rivière est une partie du monde, mais elle est mobile, jamais la 
 - Le principe d'identité: A = A
 - Le principe de non contradiction
 
+-> Les choses se contredisent donc dans le réel.
+
 Le concept de mouvement/temporalité est donc pensée de deux manières :
 
 1. **Classique:** Aquiert des propriétés mais fondamentalement reste la même.
 2. **Radical:** Rien ne demeure en nous, tout change.
+
+L'opinion commune nous amène à peser que les choses n'évoluent pas dans leurs ensemble; les mots, le vocabulaire & l'exigence sociale
+par exemple.
+
+L'être Humain est voué à la contradiction (ex: les gouts, j'aime puis j'aime plus). Montaigne résous la raison à de l'imagination.
