--- a/content/philo/ch1/g3.md
+++ b/content/philo/ch1/g3.md
@@ -4,7 +4,7 @@ title: Le Nominalisme et la diversité de la Nature
 
 # Le désir de la vérité, l'absence [...]
 
-> ![NOTE] Rappel
+> [!NOTE] Rappel
 > On a montré que la raison par l'argumentation échoue.
 
 Montaigne poursuit sa critique de la Raison. Il critique maintenant l'autre possibilité d’acquérir du savoir : l'Experiences.
