--- a/content/philo/ch1/g6.md
+++ b/content/philo/ch1/g6.md
@@ -1,4 +1,26 @@
 ---
-title: "6️⃣ Rasion et Experience: la découverte de l'ego"
+title: "6️⃣ Raison et Experience: la découverte de l'ego"
 ---
 # 🤨 Le doute comme méthode: un projet Épistémologique
+## Le projet théorique et la méthode
+DESCARTES revient sur ses premières réflexions, qu'il qualifie de métaphysiques.
+Il est à la recherche de vérités immuables. Il ne veut pas se contenter du "probable"
+car il n'est pas fiable et mène à la désillusion. "Il faut découvrir quelque chose de plus certain que la science."
+
+Il faut distinguer 2 plans : la **Pratique** et la **Théorie**.
+
+**Pour la Pratique**, elle doit être basée sur le probable pour 2 raisons: l'urgence de l'action et la contingence. 
+
+**Au niveau de la théorie**, DESCARTES assimile le faux au probable, pour éviter toute tentation. Il va utiliser le doute sceptique pour
+prouver ces certitudes, mais il n'utilise pas le doute pour douter (aka sceptiques). 
+
+### 3 Caractéristiques du doute
+
+- Le doute est **une méthode**, fondateur de la métaphysique
+- Le doute est **radical**, il faut prendre les choses à sa racine. Sinon, prouver chaque opinion une à une prendrais une éternité.
+- Le doute est **hyperbolique**, il faut qu'il soit le plus grand possible pour qu'aucun autre doute puisse le faire douter.
+
+**DESCARTES propose un nouveau critère de la vérité comparé à Platon.**
+Ce que dit Platon est très probable, mais les sceptiques arrivent à le faire douter.
+
+Son projet est formulé: c'est une oeuvre de la raison, de fondation des sciences.
