--- a/content/philo/ch2/g1.md
+++ b/content/philo/ch2/g1.md
@@ -1,5 +1,5 @@
 ---
-title: "Politique & Vérité : le Philosophe roi et et la justice idéale"
+title: "1️⃣ Politique & Vérité : le Philosophe roi et et la justice idéale"
 ---
 
 # 🔥 Critique de la Démocratie
@@ -19,3 +19,5 @@ La seule politique légitime est fondé sur une connaissance "*véritable*" de l
 # 🗺️ Métaphore du navire
 Dans le 2em texte de Platon, on retrouve une même critique implicite de la Démocratie, mais aussi de la tyrannie.
 Le matelot le plus grand et le plus fort représente à la fois le tyran et l'animal du premier texte. Quand au matelots qui décident de diriger le bateau sans connaissances et vers le naufrage, ils représentent la Démocratie
+
+La politique réunit l'art législatif et l'art judiciaire. Le philosophe, au pourvoir, subit la persecution, qui va du rire à la mort.
