--- a/content/philo/ch2/g2.md
+++ b/content/philo/ch2/g2.md
@@ -1,6 +1,6 @@
 ---
-title: "De la raison à la coutume : l'an-archie"
+title: "2️⃣ De la raison à la coutume : l'an-archie"
 ---
 
-> ![WARNING]
+> [!WARNING]
 > Montaigne ne défend pas un modèle politique anarchique. L'anarchie voudrais une disparition de l'Etat, qui n'est pas souhaité par Montaigne.
