--- a/content/philo/ch2/g3.md
+++ b/content/philo/ch2/g3.md
@@ -1,3 +1,26 @@
 ---
-title: "3️⃣"
+title: 3️⃣ La liberté du Contrat Social
 ---
+# 1️⃣ Force et Droit
+...
+# 2️⃣ Du contrat de soumission à la liberté inaliénable
+## Le Léviathan
+> 📚 Le mot provient d'un livre de Hobbes, et signifie État.
+
+Sans État, la rivalité entre les individus crée la **Peur de la Mort Violente** - la peur de mourir sans pouvoir réagir. Cette peur est **mauvaise pour tous** : elle apporte la pauvreté et la disparition de la culture. Hobbes appelle cela l'[État de nature](). Il est invivable.
+
+Alors les hommes décident de créer une institution, l'État, une autorité politique avec un souverain. Elle permet d'assurer la coexistence pacifique et la sécurité. Il se nomme [Léviathan]().
+
+Selon Hobbes, l'État est un, et son pouvoir tout-puissant. Il ne doit pas être possible de contredire l'État, car nous reviendrons à un État de nature incontrôlable.
+
+> [!tip] Hobbes est donc contre la séparation des pouvoirs
+
+## Critique de ce contrat de soumission
+### Un contrat de dupes
+Rousseau adresse une critique au [Léviathan](). Celui-ci doit protéger les humains de la mort, mais au lieu de risquer un combat avec un autre humain, c'est contre une entité toute puissante. Cet État apporte un risque d'oppressions. Dans un contrat, on est aussi supposé gagner au moins ce que l'on perd, **ce qui n'est pas le cas**. 
+### Un contrat -le prof a pas finit-
+> [!quote] Rousseau
+> Renoncer à sa liberté, c'est renoncer à sa qualité d'homme, au droit à l'humanité, même à ses devoirs.
+
+Selon Rousseau, la liberté n'a pas de prix. Elle ne peux donc pas être échangé.
+# 3️⃣
