--- a/content/philo/ch2/g3.md
+++ b/content/philo/ch2/g3.md
@@ -19,8 +19,18 @@ Selon Hobbes, l'État est un, et son pouvoir tout-puissant. Il ne doit pas être
 ### Un contrat de dupes
 Rousseau adresse une critique au [Léviathan](). Celui-ci doit protéger les humains de la mort, mais au lieu de risquer un combat avec un autre humain, c'est contre une entité toute puissante. Cet État apporte un risque d'oppressions. Dans un contrat, on est aussi supposé gagner au moins ce que l'on perd, **ce qui n'est pas le cas**. 
 ### Un contrat -le prof a pas finit-
+
 > [!quote] Rousseau
 > Renoncer à sa liberté, c'est renoncer à sa qualité d'homme, au droit à l'humanité, même à ses devoirs.
 
-Selon Rousseau, la liberté n'a pas de prix. Elle ne peux donc pas être échangé.
-# 3️⃣
+Selon Rousseau, la liberté n'a pas de prix, car elle ne fait pas partie de ce que l'on a mais de ce ue l'on est.
+
+**Le problème donc est le suivant : il faut des lois, de la sécurité, des forces publiques mais sans enfreindre sur la liberté**.
+# 3️⃣ Le contrat social légitime de Rousseau
+
+"Il faut une forme d'association où les hommes assures à la foi leur sécurité et demeurent totalement libres."
+
+> [!warning] L'idée de conciliation est impossible
+> Une conciliation "à l'amiable" (comme propose John Lock) n'est pas intéressante pour Rousseau, car il y a quand même une privation de liberté, même moindre.
+
+Le peuple doit donc être souverain. Rousseau propose donc l'idée suivante : **chacun offre sa personne à la communauté, et en échange chacun obtient toute personne de la communauté en tant que partie du tout**. Mais cette solution pose un paradoxe : comment peut on conserver ses libertés et renonçant à nous même ? Il faut différencier la liberté à l'état naturel, où je suis libre car indépendant, et la liberté civile/conventionnelle. 
