✏️ Dernier push avant le J

--- a/content/philo/ch2/g3.md
+++ b/content/philo/ch2/g3.md
@@ -2,7 +2,19 @@
 title: 3️⃣ La liberté du Contrat Social
 ---
 # 1️⃣ Force et Droit
-...
+## Introduction
+L'objet du contrat social est politique. Il vise à concilier sécurité et liberté. Pour Rousseau, la liberté est fondamentale car c'est une différence anthropologique entre animaux et humains. Les animaux ont une esquisse de raisonnement, mais aucune liberté qui leurs permettrais de sortir de leurs instincts. "*Pas de désir de démocratie chez les abeilles*".
+
+La politique tel que Rousseau la développe se base sur l'anthropologie. L'homme **est** liberté, il est caractérisé par une perfectibilité communautaire et individuelle. 
+
+## Le droit du plus fort
+Rousseau est donc à la recherche de ce qui fonde l'autorité publique. Il nous montre que le droit du plus fort est une faute dès la syntaxe, car force et droit sont incompatibles.
+
+| Force                 | Droit         |
+| --------------------- | ------------- |
+| * Contraintes         | * Obligations |
+| * Necessité           | * Liberté     |
+| *  Puissance Physique | * Moralité    |
 # 2️⃣ Du contrat de soumission à la liberté inaliénable
 ## Le Léviathan
 > 📚 Le mot provient d'un livre de Hobbes, et signifie État.
