--- a/content/philo/ch2/g2.md
+++ b/content/philo/ch2/g2.md
@@ -2,5 +2,14 @@
 title: "2️⃣ De la raison à la coutume : l'an-archie"
 ---
 
-> [!WARNING]
+> [!WARNING] Attention, contre sens !
 > Montaigne ne défend pas un modèle politique anarchique. L'anarchie voudrais une disparition de l'Etat, qui n'est pas souhaité par Montaigne.
+
+On revient à l'origine du mot anarchie. $an$ = sans, $arche$ = fondement. On obtient donc **sans fondements**.
+
+La raison ne peut toujours rien fonder. Même logique ici. 
+
+# 1️⃣ La liberté et la loi
+La liberté est primordiale pour Montaigne, car il apporte beaucoup d'importance au voyage. Il préfèrerait faire quelque chose de juste et illégal. Il n'est pas pour autant pour la révolution. Contester les lois est synonyme de désordre. 
+# 2️⃣ Jugement : le fondement mystique de l'autorité
+L'idée de jugement est aussi sotte, car nous avons montré précédemment que le jugement est impossible (selon les sceptiques). Cependant, a raison est impuissante à fonder l'autorité des lois. Elle est mystique, car n'as pas d'origine logique, mais s'ancre plutôt dans les coutumes.
