--- a/content/philo/ch2/g2.md
+++ b/content/philo/ch2/g2.md
@@ -2,14 +2,22 @@
 title: "2️⃣ De la raison à la coutume : l'an-archie"
 ---
 
+# ✏️ Légal & légitime
+
 > [!WARNING] Attention, contre sens !
 > Montaigne ne défend pas un modèle politique anarchique. L'anarchie voudrais une disparition de l'Etat, qui n'est pas souhaité par Montaigne.
 
-On revient à l'origine du mot anarchie. $an$ = sans, $arche$ = fondement. On obtient donc **sans fondements**.
+On revient à l'origine du mot anarchie. $an$ = sans, $arche$ = fondement. On obtient donc **sans fondements**. La raison ne peut toujours rien fonder.
 
-La raison ne peut toujours rien fonder. Même logique ici. 
+**Légal**: ce qui est conforme au droit positif ()
+**Légitime**: conforme à un idéale de justice
 
+Une loi peut être Légal mais pas légitime. Exemple: les lois antisémites. 
 # 1️⃣ La liberté et la loi
 La liberté est primordiale pour Montaigne, car il apporte beaucoup d'importance au voyage. Il préfèrerait faire quelque chose de juste et illégal. Il n'est pas pour autant pour la révolution. Contester les lois est synonyme de désordre. 
 # 2️⃣ Jugement : le fondement mystique de l'autorité
+Les lois sont en crédit, non parce qu'elles sont justes, mais parce qu'elles sont "loi".
+
 L'idée de jugement est aussi sotte, car nous avons montré précédemment que le jugement est impossible (selon les sceptiques). Cependant, a raison est impuissante à fonder l'autorité des lois. Elle est mystique, car n'as pas d'origine logique, mais s'ancre plutôt dans les coutumes.
+
+# 3️⃣
