--- a/content/philo/ch2/g2.md
+++ b/content/philo/ch2/g2.md
@@ -20,4 +20,5 @@ Les lois sont en crédit, non parce qu'elles sont justes, mais parce qu'elles so
 
 L'idée de jugement est aussi sotte, car nous avons montré précédemment que le jugement est impossible (selon les sceptiques). Cependant, a raison est impuissante à fonder l'autorité des lois. Elle est mystique, car n'as pas d'origine logique, mais s'ancre plutôt dans les coutumes.
 
-# 3️⃣
+# 3️⃣ Loi, justice et interprétation
+Il n'y a pas de justice absolue connaissable. Sachant que toutes les lois sont générales, et que les cas de délits sont tous particuliers, alors il nous faut un juge qui interprète la loi en fonction du cas. Si on ne peut pas atteindre une vérité, comment peut on évoquer une désobéissance ? Il semble donc qu'il faille disposer d'une norme universelle de justice.
