✏️ Switching to vitepress

--- a/philo/ch2/g3.md
+++ b/philo/ch2/g3.md
@@ -32,7 +32,7 @@ Selon Hobbes, l'État est un, et son pouvoir tout-puissant. Il ne doit pas être
 Rousseau adresse une critique au [Léviathan](). Celui-ci doit protéger les humains de la mort, mais au lieu de risquer un combat avec un autre humain, c'est contre une entité toute puissante. Cet État apporte un risque d'oppressions. Dans un contrat, on est aussi supposé gagner au moins ce que l'on perd, **ce qui n'est pas le cas**. 
 ### Un contrat -le prof a pas finit-
 
-> [!quote] Rousseau
+> [!important] Rousseau
 > Renoncer à sa liberté, c'est renoncer à sa qualité d'homme, au droit à l'humanité, même à ses devoirs.
 
 Selon Rousseau, la liberté n'a pas de prix, car elle ne fait pas partie de ce que l'on a mais de ce ue l'on est.
