1️⃣ Fix orders & dnl push 2

--- a/contribution/101.md
+++ b/contribution/101.md
@@ -1,6 +1,7 @@
 ---
 title: Mardown 101
 description: Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
+order: 2
 ---
 Le markdown est un outil/language d'une simplicité enfantine ! Pas besoin de vous prendre la tête pour écrire une page.
 
