--- a/philo/ch3/g2.md
+++ b/philo/ch3/g2.md
@@ -20,7 +20,15 @@ La césure fondamentale est la technique moderne, qui a des effets globaux sur l
 ### Le devoir comme impératif alégorique
 
 À l'exception de la médecine, la technique n'as pas d'éthique globale. L'éthique est anthropologique, elle a l'homme pour centre. Elle ne considère donc pas la nature ou d'autres êtres non humains.
+
+Impératifs :
+- Hypothétique (= devoir relatif)
+- Catégorique (= devoir absolue)
+
 Il y a deux options: Mentir ou rester morale.
 Mentir n'est pas prudent. On ne peut jamais prévoir les conséquences futurs.
 
 ### Technique et éthique
+
+Avec les révolutions techniques, la science donne une puissance démesurée aux hommes sur la nature. 
+
