--- a/philo/ch3/g2.md
+++ b/philo/ch3/g2.md
@@ -2,33 +2,32 @@
 
 ## La technique ancestrale
 
-Hans Jonas caractérise la technique depuis que les hommes existent, pour le mettre en contraste avec la technique moderne (XVII)
+Hans Jonas caractérise la technique depuis que les hommes existent, pour la mettre en contraste avec la technique moderne (XVIIe siècle).
 
-La terre est immortelle et inépuisable, car les hommes ne transforment qu'une parcelle de la nature.
+La Terre est immortelle et inépuisable, car les hommes ne transforment qu'une parcelle de la nature.
 La césure fondamentale est la technique moderne, qui a des effets globaux sur la nature.
 
-|   Nature   |  Artefacts  |
-|------------|-------------|
-| Immunité   | etc.        |
-| Inépuisable| Epuisable   |
-| Immortel   | Précarité   |
-| Immuable   | Changement  |
-| Souverain  | etc.        |
+|   Nature     |  Artefacts  |
+|--------------|-------------|
+| Immunité     | etc.        |
+| Inépuisable  | Épuisable   |
+| Immortelle   | Précarité   |
+| Immuable     | Changement  |
+| Souveraine   | etc.        |
 
-## La technique moderne : démesure et ethique de la responsabilité
+## La technique moderne : démesure et éthique de la responsabilité
 
-### Le devoir comme impératif alégorique
+### Le devoir comme impératif allégorique
 
-À l'exception de la médecine, la technique n'as pas d'éthique globale. L'éthique est anthropologique, elle a l'homme pour centre. Elle ne considère donc pas la nature ou d'autres êtres non humains.
+À l'exception de la médecine, la technique n'a pas d'éthique globale. L'éthique est anthropologique : elle a l'homme pour centre. Elle ne considère donc pas la nature ou d'autres êtres non humains.
 
 Impératifs :
 - Hypothétique (= devoir relatif)
-- Catégorique (= devoir absolue)
+- Catégorique (= devoir absolu)
 
-Il y a deux options: Mentir ou rester morale.
-Mentir n'est pas prudent. On ne peut jamais prévoir les conséquences futurs.
+Il y a deux options : mentir ou rester moral.
+Mentir n'est pas prudent. On ne peut jamais prévoir les conséquences futures.
 
 ### Technique et éthique
 
-Avec les révolutions techniques, la science donne une puissance démesurée aux hommes sur la nature. 
-
+Avec les révolutions techniques, la science donne une puissance démesurée aux hommes sur la nature.
