--- a/philo/ch3/g2.md
+++ b/philo/ch3/g2.md
@@ -31,3 +31,11 @@ Mentir n'est pas prudent. On ne peut jamais prévoir les conséquences futures.
 ### Technique et éthique
 
 Avec les révolutions techniques, la science donne une puissance démesurée aux hommes sur la nature.
+
+1. Le concept de devoir suppose une réforme de du devoir. Le Devoir est toujours réciproque, mais il pert maintenant sa réciprocité dans le futur.
+
+2. La vie doit rester possible et désirable.
+
+3. Il faut être vigilant car on ne peut pas prévoir les conséquences de nos actions.
+
+Certains penseurs substituent ce concept au capitalisme, et à l'homme du capitalisme. 
