--- a/philo/ch3/g2.md
+++ b/philo/ch3/g2.md
@@ -1,3 +1,8 @@
+---
+title: La technique, la nature, la responsabilité
+order: 3
+---
+
 # La technique, la nature, la responsabilité
 
 ## La technique ancestrale
