--- a/philo/ch1/g1.md
+++ b/philo/ch1/g1.md
@@ -1,5 +1,6 @@
 ---
-title: 1️⃣ Le désir de vérité - La quête de l'essence
+title: Le désir de vérité - La quête de l'essence
+order: 2
 ---
 
 > [!Todo] Fiche écrite par Guilhem :D
