--- a/philo/ch1/g2.md
+++ b/philo/ch1/g2.md
@@ -1,5 +1,6 @@
 ---
-title: "2️⃣ La raison en questions : le Scepticisme"
+title: La raison en questions : le Scepticisme
+order: 3
 ---
 # Réflexion Épistémologique
 ## Relativité de la perception
