--- a/philo/ch1/g2.md
+++ b/philo/ch1/g2.md
@@ -1,7 +1,8 @@
 ---
-title: La raison en questions : le Scepticisme
+title: "La raison en questions : le Scepticisme"
 order: 3
 ---
+
 # Réflexion Épistémologique
 ## Relativité de la perception
 Montaigne considère la perception - les données reçu par notre cerveau - comme relative et interdisant toute connaissance subjective. Il va d'abord prendre l'exemple de la maladie, du sommeil et de la folie pour démontrer que certains états humains manipule notre perception, généraliser sa conclusion à tout les états de l'être humain.
