--- a/philo/ch1/g3.md
+++ b/philo/ch1/g3.md
@@ -1,5 +1,6 @@
 ---
-title: 3️⃣ Le Nominalisme et la diversité de la Nature
+title: Le Nominalisme et la diversité de la Nature
+order: 4
 ---
 
 # Le désir de la vérité, l'absence [...]
