--- a/philo/ch1/g4.md
+++ b/philo/ch1/g4.md
@@ -1,5 +1,6 @@
 ---
-title: "4️⃣ Connais-toi toi-même : Un impératif paradoxal"
+title: "Connais-toi toi-même : Un impératif paradoxal"
+order: 5
 ---
 # ☃️ Introduction
 Montaigne vise dans cet extrait les philosophe. Il décrit un homme (lui), il ne s'agit plus de définir l'homme universel
