--- a/philo/ch1/g6.md
+++ b/philo/ch1/g6.md
@@ -1,5 +1,6 @@
 ---
-title: "6️⃣ Raison et Experience: la découverte de l'ego"
+title: "Raison et Experience: la découverte de l'ego"
+order: 7
 ---
 # 🤨 Le doute comme méthode: un projet Épistémologique
 ## Le projet théorique et la méthode
