🔥 Grand ménage épisode 1

--- a/philo/ch2/g1.md
+++ b/philo/ch2/g1.md
@@ -1,5 +1,6 @@
 ---
-title: "1️⃣ Politique & Vérité : le Philosophe roi et et la justice idéale"
+title: "Politique & Vérité : le Philosophe roi et et la justice idéale"
+order: 2
 ---
 
 # 🔥 Critique de la Démocratie
