--- a/philo/ch2/g2.md
+++ b/philo/ch2/g2.md
@@ -1,5 +1,6 @@
 ---
-title: "2️⃣ De la raison à la coutume : l'an-archie"
+title: "De la raison à la coutume : l'an-archie"
+order: 3
 ---
 
 # ✏️ Légal & légitime
