--- a/philo/ch2/g3.md
+++ b/philo/ch2/g3.md
@@ -1,5 +1,6 @@
 ---
-title: 3️⃣ La liberté du Contrat Social
+title: La liberté du Contrat Social
+order: 4
 ---
 # 1️⃣ Force et Droit
 ## Introduction
