--- a/philo/ch2/g4.md
+++ b/philo/ch2/g4.md
@@ -1,5 +1,6 @@
 ---
 title: Vérité et Démocratie
+order: 5
 ---
 
 Dans les démocraties actuelles, le peuple détient-il réellement le pouvoir ? On peut en douter, car il est difficile de faire participer chaque citoyen pour plusieurs raisons :
