--- a/philo/ch3/g3.md
+++ b/philo/ch3/g3.md
@@ -1,12 +1,16 @@
 ---
-title: 🚧 Écriture en cours
+title: La Honte prométhéenne et le devenir fantôme
 order: 4
 ---
 
-::: warning ⚠️ Page en construction !
-Cette page n'as pas encore été terminé. Revenez plus tard pour la suite du cours !
-:::
+# La Honte Prométhéenne : le mépris de la finitude
 
-::: tip 💖 Envi de nous aider ?
-Nous sommes à la recherche de rédacteur pour finir les fiches à l'approche du bac ! *Pas besoins de coder, fiches s'adapte à vous - promis !*
-:::
+> La honte prométhéenne est un sentiment d’infériorité par rapport aux objets techniques fabriqués - qui eux sont parfait et xx alors que l'homme est le fruit du hasard.
+
+Cela ne semble pas correspondre à notre vision de la honte : on dirait plus que les hommes se sentent inférieurs à leurs propres artefacts. Or, avec le mythe de Prométhée, nous avons vu que l'homme a une supériorité ontologique sur la nature - et donc en toute logique sur ses créations.
+
+L'Homme ne devrait pas avoir honte. Tout d'abord, on devrait admirer le créateur, pas la créature. La machine n'est également pas capable de penser comme lui - elle n'effectue qu'une combinatoire de données. 
+
+# Le devenir fantôme
+
+## Machines, Hommes de masse et dépersonnalisation
