--- a/philo/ch3/g1.md
+++ b/philo/ch3/g1.md
@@ -3,10 +3,10 @@ title: 🚧 Écriture en cours
 order: 302
 ---
 
-::: warning ⚠️ Page en construction !
+::: warning **⚠️ Page en construction !**
 Cette page n'as pas encore été terminé. Revenez plus tard pour la suite du cours !
 :::
 
-::: tip 💖 Envi de nous aider ?
+::: tip **💖 Envi de nous aider ?**
 Nous sommes à la recherche de rédacteur pour finir les fiches à l'approche du bac ! *Pas besoins de coder, fiches s'adapte à vous - promis !*
 :::
