--- a/philo/ch4/g1.md
+++ b/philo/ch4/g1.md
@@ -19,3 +19,5 @@ graph LR
 ...
 
 L'Art pose alors problème : elle apporte une corruption des meurs. Pour les grecs, la vérité est associé au bon et au beau.
+
+Mais soumettre l'art à des critères de vérités ne serait pas méconnaître son caractère imaginaire ?
