--- a/philo/ch3/g1.md
+++ b/philo/ch3/g1.md
@@ -1,12 +1,9 @@
 ---
-title: 🚧 Écriture en cours
+title: "Le Mythe de Prométhée : Du sens de la techné"
 order: 302
 ---
 
-::: warning **⚠️ Page en construction !**
-Cette page n'as pas encore été terminé. Revenez plus tard pour la suite du cours !
-:::
+On pourrait dire que la reflexión sur la technique ne mériterait pas un chapitre à part.  Le mythe de Prométhée aborde tout autant la technique que les caractéristiques humaines.
 
-::: tip **💖 Envi de nous aider ?**
-Nous sommes à la recherche de rédacteur pour finir les fiches à l'approche du bac ! *Pas besoins de coder, fiches s'adapte à vous - promis !*
-:::
+**Pour résumer,** Épiméthée a distribué les qualités/capacités entre les êtres vivants. Mais il a oubliés les hommes, qui sont donc démunies, sand défenses à leurs naissance. Prométhée vole le savoir technique et le fau aux dieux pour réparer cette erreur. Cela explique d'ailleurs le lien particulier entre les hommes et (les) dieux.
+
