--- a/philo/ch2/g5.md
+++ b/philo/ch2/g5.md
@@ -10,3 +10,5 @@ Cette page n'as pas encore été terminé. Revenez plus tard pour la suite du co
 ::: tip 💖 Envi de nous aider ?
 Nous sommes à la recherche de rédacteur pour finir les fiches à l'approche du bac ! *Pas besoins de coder, fiches s'adapte à vous - promis !*
 :::
+
+La loi est elle l'expression de rapport de forces ?
