📝 Fix syntaxe chap. 1

--- a/philo/ch1/g1.md
+++ b/philo/ch1/g1.md
@@ -3,8 +3,8 @@ title: Le désir de vérité - La quête de l'essence
 order: 102
 ---
 
-> [!Todo] Fiche écrite par Guilhem :D
-
+:::note Fiche écrite par Guilhem :D
+:::
 # 📖 Texte
 - 📜 La République V
 - 👤 Auteur: **Platon** (selon **Socrate**)
@@ -18,7 +18,7 @@ L'ouvrage de **La République** a pour but de mener une réflexion sur ce qu'est
 ## 🌺 Le désir de la sagesse
 > *Le désir est l'experience d'un manque, de la conscience de ce manque et de l’impulsion qui est censée résoudre ce manque.*
 
-La première partie du texte interroge l'aspect étymologique du mot **philosophie**. Dans l'idée, $$philo$$ signifie **désir** ou **amour** et $$sophia$$ serait **sagesse**. Ce passage ne définit pas la sagesse, mais en revanche utilise la notion de désir.
+La première partie du texte interroge l'aspect étymologique du mot **philosophie**. Dans l'idée, $philo$ signifie **désir** ou **amour** et $sophia$ serait **sagesse**. Ce passage ne définit pas la sagesse, mais en revanche utilise la notion de désir.
 La première partie du texte interroge l'aspect étymologique du mot **philosophie**. Ce passage ne définit pas la sagesse, mais en revanche utilise la notion de désir.
 
 En effet, il utilise des exemples tel que l'amateur de vin pour justifier son hypothèse que le philosophe n'est pas quelqu'un avec l'amour d'un savoir en particulier mais de toute la sagesse, dans son ensemble, *tel qu'un amateur de vin apprécie tout bon vin*.
@@ -75,8 +75,8 @@ La pensée est définie fondamentalement comme un bien véritable. Hors la plupa
 
 Le philodoxe est celui qui aime l’opinion, l'apparence. Avec cette proposition, on est amené à définir l'essence.
 
-| Philodoxe                       | Philosophe                                   |
-| :-----------------------------: | :------------------------------------------: |
-| $$doxa$$ = opinions = croyances | connaissance -> rendre raison de son propos. |
-| ↪️ basé sur les apparences     | ↪️ Essence : Q?                              |
-| ↪️ Mais apparence temporelle   | ↪️ Essence éternelle, immuable                |
+|           Philodoxe           |                  Philosophe                  |
+| :---------------------------: | :------------------------------------------: |
+| $doxa$ = opinions = croyances | connaissance -> rendre raison de son propos. |
+|  ↪️ basé sur les apparences   |               ↪️ Essence : Q?                |
+| ↪️ Mais apparence temporelle  |        ↪️ Essence éternelle, immuable        |
