--- a/philo/ch1/g4.md
+++ b/philo/ch1/g4.md
@@ -2,27 +2,35 @@
 title: "Connais-toi toi-même : Un impératif paradoxal"
 order: 105
 ---
+
 # ☃️ Introduction
 Montaigne vise dans cet extrait les philosophe. Il décrit un homme (lui), il ne s'agit plus de définir l'homme universel
 
 # 😱 La crise d'un concept: L'Homme
 La tâche de Montainge est de définir un seul homme : **lui même**. Il met en crise la notion d'homme singulier.
+
 #### Multiplicité Interne
 
 # ⌛️ Temporalité, Diversité, Multiplicité et Écriture de soi
+
 La formule *écriture de soi* est dès le début trompeuse. Il y a 3 obstacles majeurs à la prise de conscience de la temporalité :
-### 1️⃣ L'illusion Linguistique
-Le mot 'rivière' est stable, mais la rivière ne l'est pas. "Chaque mot est un préjugé" $Neitzche$
-### 2️⃣ L'illusion Sociale
+
+## 1️⃣ L'illusion Linguistique
+Le mot 'rivière' est stable, mais la rivière ne l'est pas. "Chaque mot est un préjugé" $Neitzsche$
+
+## 2️⃣ L'illusion Sociale
 La situation sociable a un caractère immuable (élève, retraité)
-### 3️⃣ L'illusion Symbolique
+
+## 3️⃣ L'illusion Symbolique
 L'image gratifiante qu'on donne aux autres 
+
 #### ➡️ Obstacle à la prise de conscience que je ne suis pas un être stable
 
 Reconnaissance de notre Nihilité. Je suis inconscient.
 
 # 🥸 Comment contourner ces illusions ? 
-Connait toi toi même est un commendement paradoxal. Il faudrait plutôt se **relire**, ce qui est une des raisons pour laquelle Montaigne écrit les Essaies. En se relisant, il prend conscience qu'il a changé. Par la lecture des essaies, on s'identifie à certains changement (et donc on en prend conscience)
+
+Connait toi toi même est un commandement paradoxal. Il faudrait plutôt se **relire**, ce qui est une des raisons pour laquelle Montaigne écrit les Essaies. En se relisant, il prend conscience qu'il a changé. Par la lecture des essaies, on s'identifie à certains changement (et donc on en prend conscience)
 
 Visé éthique et politique : si je suis étranger à moi même, alors j'accepte mieux l'étrange.
 
@@ -30,6 +38,7 @@ Visé éthique et politique : si je suis étranger à moi même, alors j'accepte
 -> les hommes ont peur de l'iconue.
 
 # 🍃 Nihilité et Sagesse: l'impact du vent
+
 Il faut tirer des leçons de morale : le bonheur, la raison, la liberté, le devoir. Hors, avec les arguments actuels, nous avons plutôt la définition d'une philosophie pessimiste. **Pourquoi Montainge et Nietzsche ne sont pas pessimistes ?**
 
 La Nihilité est comprendre que l'existence dépend de rien.
