--- a/philo/ch1/g6.md
+++ b/philo/ch1/g6.md
@@ -29,27 +29,28 @@ Son projet est formulé: c'est une oeuvre de la raison, de fondation des science
 ## Les Raisons de douter
 DESCARTES a toujours comme projet de trouver une vérité **certaine**, au caractère **indubitable**.
 
-**==Les sens sont trompeurs==** : il m'on déjà fait défaut, je vais donc rejeter tout ce qu'ils m'indiquent.
+<u>Les sens sont trompeurs</u> : il m'on déjà fait défaut, je vais donc rejeter tout ce qu'ils m'indiquent.
 
-**==Stratégie de Méthode==** : j'assimile le douteux au faux, pour éviter au maximum l'experience de la désillusion.
+<u>Stratégie de Méthode</u> : j'assimile le douteux au faux, pour éviter au maximum l'experience de la désillusion.
+
 ## L'argument du rêve
 Dans [Méditations Métaphysiques]() (mieux développé), DESCARTES distingue ce qui est très sensible et peu éloigné de ce qui est peu sensible et très éloigné. Il apporte alors un nouvel argument face à l'objection : le rêve. C'est une expérience que tout le monde a au moins expérimenté une fois dans sa vie, et DESCARTES questionne toute l'existence en la comparant à un rêve : *et si nous n'étions qu'en train de rêver ?*
+
 ## Le Dieux Trompeur
+
 ## La certitude d'exister : l'ego
+
 ### Je pense, **donc je suis**
 DESCARTES fait alors la découverte de la première certitude. **Il est**. *Pourquoi ?* Car l'existence est la condition Ontologique du doute. Pour rêver il faut exister -> tient à l'argument du rêve.
 
-==**Je suis** devient donc le principe de la philosophie.==
+<strong><u>Je suis</u> devient donc le principe de la philosophie.</strong>
 
-$Demarche$
 ### Conscience & Liberté
 Cette première vérité est nécessairement vrais, chaque fois que je la conçoit dans mon esprit. 
 
 > [!warning] Les souvenirs sont trompeurs ! 
 
-J'ai découvert la première certitude. Je suis est donc la racine de l'arbre de la connaissance. Mais le doute subsite :
-
-> Moi qui suis, qui suis-je ?
+J'ai découvert la première certitude. Je suis est donc la racine de l'arbre de la connaissance. Mais le doute subsite : **Moi qui suis, qui suis-je ?**
 
 Quelle est l'essence de Moi et comment DESCARTES y parvient-il ?
 
