--- a/philo/ch1/g2.md
+++ b/philo/ch1/g2.md
@@ -48,15 +48,15 @@ L'addition de ces deux points forment le [Scepticisme](/philo/def#scepticisme). 
 
 | Pyrrhon & Sextus Empiris                            | Montaigne                                        |
 | --------------------------------------------------- | -----------------------------------------------  |
-| ISOTHÉNIE -> l'équilibre des arguments vrais & faux | [[#ISOTHÉNIE impossible\|ISOTHÉNIE impossible]]  |
-| ÉPOCHÉ -> Suspension du jugement.                   | [[#ÉPOCHÉ impossible\|ÉPOCHÉ impossible]]        |
-| ATARAXIE -> Paix de l'âme                           | [[#ATARAXIE impossible\|ATARAXIE impossible]]    |
+| ISOTHÉNIE -> l'équilibre des arguments vrais & faux | [ISOTHÉNIE impossible](#ISOTHÉNIE impossible)    |
+| ÉPOCHÉ -> Suspension du jugement.                   | [ÉPOCHÉ impossible](#ÉPOCHÉ impossible)          |
+| ATARAXIE -> Paix de l'âme                           | [ATARAXIE impossible](#ATARAXIE impossible)      |
 
 <center><h3>➡️ Idée de bonheur 💖</h3></center>
 
 ### L'avis de Montaigne
 #### ISOTHÉNIE impossible
-Les idées sont chargés d'[[/philo/def#Affects]], on a toujours en nous une idée plus forte qu'une autre. Exemple avec le Cannibalisme : une idée, deux affects fondamentale différents (j'aime/t'es fou)
+Les idées sont chargés d'[Affects](/philo/def#Affects), on a toujours en nous une idée plus forte qu'une autre. Exemple avec le Cannibalisme : une idée, deux affects fondamentale différents (j'aime/t'es fou)
 
 **Que devient la liberté de la pensée ?**
 #### ÉPOCHÉ impossible
